# AegisCore

./: .env.example  .gitignore  .gitmodules  .markdownlintignore  .pre-commit-config.yaml  .typos.toml  .yamllint.yaml  05_full_package_rename.py  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_AGENT.md  Makefile  README.md  README_KO.md  RELEASE.md  SECURITY.md  TELEMETRY.md  THIRD_PARTY_LICENSES.md  docker-compose.dev.yml  docker-compose.watch.yml  docker-compose.yml  langgraph.json  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/aegiscore-scan/: action.yml
.github/workflows/: ci.yml  promote-stable.yml  release-recover.yml  release.yml  security-scan-example.yml  security.yml
.semgrep/: aegiscore-rules.yml
benchmark/: EXPLOITBENCH-GAINS.md  README-exploitbench.md  README-mhbench.md  README.md  harness.py  runner.py  schemas.py
benchmark/configs/: __init__.py  buttercup-smoke.yaml  decepticon-bench-v1.yaml  exploitbench-smoke.yaml  exploitbench-v8-small.yaml
benchmark/cve_bench/: README.md  __init__.py  dry_run.py  runner.py
benchmark/dreadgoad/: README.md  harness.py
benchmark/dreadgoad/configs/: apt-grid-15runs.yaml  apt-grid-full.yaml  apt-shared-lab-grid.yaml  apt10.yaml  apt28.yaml  apt29.yaml  apt36.yaml  apt41.yaml  apt44.yaml  kimsuky.yaml  lazarus.yaml  muddywater.yaml  mustang-panda.yaml  salt-typhoon.yaml  turla.yaml
benchmark/providers/: buttercup.py  exploitbench.py  exploitbench_capabilities.py  mhbench.py
benchmark/results/: README.md
benchmark/results/cve-bench/: README.md
clients/cli/: package.json
clients/cli/src/: types.ts
clients/cli/src/commands/: agent.ts  assistantOverride.ts  model.ts  plugins.ts  quit.ts  types.ts  web.ts
clients/cli/src/components/: ActivityIndicator.tsx  Prompt.tsx
clients/cli/src/hooks/: sub-agent-sessions.test.ts  useAgent.test.tsx  useAgent.ts  useSubAgentSessions.ts
clients/cli/src/state/: AppState.ts
clients/cli/src/utils/: agents.ts  theme.ts  threadStore.ts  version.ts
clients/launcher/: .goreleaser.yml  go.mod  main.go
clients/launcher/cmd/: health.go  logs.go  onboard.go  opscontrol_register.go  remove.go  root.go  start.go  start_test.go  status.go  stop.go  update.go
clients/launcher/cmd/opscontrol/: daemon.go  install.go  opscontrol.go  status.go  supervisor.go  uninstall.go
clients/launcher/internal/compose/: compose.go  compose_test.go
clients/launcher/internal/config/: config.go  config_test.go  env.example
clients/launcher/internal/engagement/: picker.go
clients/launcher/internal/health/: health.go  health_test.go
clients/launcher/internal/migrate/: migrate.go  migrate_test.go  steps.go
clients/launcher/internal/opscontrol/: docker_compose_backend.go  (+6 more)
clients/shared/streaming/: package.json
clients/web/: package.json
clients/web/server/: terminal-server.ts
config/: claude4_compat.yaml  claude_code_handler.py  litellm.yaml  litellm_dynamic_config.py  litellm_startup.py  oauth_token_store.py  ollama_probe.py
containers/: c2-sliver-entrypoint.sh  cli.Dockerfile  langgraph.Dockerfile  sandbox-entrypoint.sh  sandbox.Dockerfile  skillogy.Dockerfile  web-entrypoint.sh  web.Dockerfile
containers/postgres-init/: 01-create-web-db.sql  02-bloodhound-db.sh
docs/: COWORK.md  QUALITY_BAR.md  agent-file-conventions.md  agent-file-mapping.md  agents.md  architecture.md  benchmark-comparison.md  cli-reference.md  contributing.md  contributor-architecture.md  e2e-testing-guide.md  engagement-workflow.md  getting-started.md  knowledge-graph.md  library-consumer-guide.md  library-usage.md  makefile-reference.md  mcp.md  models.md  offensive-vaccine.md  plugin-author-guide.md  pypi-distribution-strategy.md  setup-guide.md  skill-cleanup-progress.md  skill-schema.md  skillogy.md  skills.md  update-channels.md  web-dashboard.md
docs/adr/: 0001-record-architecture-decisions.md  0002-pr-tiering-and-blast-radius.md  0004-zero-ai-slop-policy.md  0005-bloodhound-via-bhce-rest-client.md  0006-agent-driven-container-lifecycle.md  0007-ai-surface-technology-node.md  0008-skillogy-hard-acl-phase1a.md  0009-hitl-langgraph-native-migration.md  0010-open-web-acquisition.md  0011-skillogy-lightrag-hybrid-retrieval.md  README.md
docs/architecture/: context-engineering.md  red-team-infrastructure.md
docs/design/: 2026-06-03-external-docs-research.md  2026-06-03-kg-middleware-implementation-research.md  2026-06-03-kg-middleware-redesign.md  2026-06-04-bloodhound-kgstore-mapping.md  2026-06-04-slither-kgstore-mapping.md  2026-06-11-launcher-image-decoupling.md  2026-06-12-roe-guardrail-middleware-redesign.md  2026-06-12-skillogy-load-skill-by-name-pollution.md  2026-06-12-tmux-per-command-env-resync-marker-race.md  2026-06-15-web-search-engine-plan.md  2026-06-20-telemetry-data-collection-design.md  attack-graph-schema.md  evidence-and-findings-conventions-research.md  neo4j-research-notes.md  opplan-middleware.md  single-bash-and-graphdb.md  skillogy-brain-redesign.md  skillogy.md
docs/engineering/: ci-arsenal.md
docs/features/: blue-cell.md
docs/integrations/: ci-cd.md  external-agents.md  github-actions.md
docs/migration/: from-0.0.x.md
docs/proposals/: 156-compose-architecture.md  redamon-feature-integration.md  redamon-top3-integration-plan.md
docs/red-team/: ai-red-teaming.md  operations.md  opplan-domain-knowledge.md  recon-methodology.md
docs/security/: audit-ledger.md  decepticon-threat-model.md  hitl-approval.md  neo4j-hardening.md  prompt-injection-defense.md  roe-machine-enforcement.md  sandbox-isolation.md  security-controls.md  sisyphus-pr.md
docs/tools/: open-web.md
integrations/agent-skills/aegiscore/: SKILL.md  reference.md
integrations/agent-skills/decepticon/: examples.md
telemetry-gateway/: DEPLOY.md  README.md  build_dashboard.py  export_corpus.py  package.json  schema.json  wrangler.toml
telemetry-gateway/src/: index.ts  posthog.ts  schema.ts
telemetry-gateway/test/: schema.test.ts
tests/: test_compose_network_isolation.py
(+40 files in other folders)
